// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons|AddButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-primary"
    onClick={[Function]}
    type="button"
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-plus has-text-inherit"
      />
    </span>
    <span>
       
      Add
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|Button Colors 1`] = `
<div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-primary"
      onClick={[Function]}
      type="button"
    >
      primary
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-link"
      onClick={[Function]}
      type="button"
    >
      link
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-info"
      onClick={[Function]}
      type="button"
    >
      info
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-success"
      onClick={[Function]}
      type="button"
    >
      success
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-warning"
      onClick={[Function]}
      type="button"
    >
      warning
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-danger"
      onClick={[Function]}
      type="button"
    >
      danger
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-white"
      onClick={[Function]}
      type="button"
    >
      white
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-light"
      onClick={[Function]}
      type="button"
    >
      light
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-dark"
      onClick={[Function]}
      type="button"
    >
      dark
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-black"
      onClick={[Function]}
      type="button"
    >
      black
       
    </button>
  </div>
  <div
    className="sc-htoDjs bIDNS"
  >
    <button
      className="button is-text"
      onClick={[Function]}
      type="button"
    >
      text
       
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons|Button Loading 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-primary is-loading"
    onClick={[Function]}
    type="button"
  >
     
    Loading Button
  </button>
</div>
`;

exports[`Storyshots Buttons|CreateButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <div
    className="sc-gzVnrw fzShco has-text-centered"
  >
    <button
      className="button is-primary"
      onClick={[Function]}
      type="button"
    >
       
      Create
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons|DeleteButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-warning"
    onClick={[Function]}
    type="button"
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-times has-text-inherit"
      />
    </span>
    <span>
       
      Delete
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|DownloadButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <a
    className="button is-link"
    disabled={false}
    href=""
    onClick={[Function]}
  >
    <span
      className="icon is-medium"
    >
      <i
        className="fas fa-arrow-circle-down"
      />
    </span>
    <span>
      Download
    </span>
  </a>
</div>
`;

exports[`Storyshots Buttons|EditButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-default"
    onClick={[Function]}
    type="button"
  >
     
    Edit
  </button>
</div>
`;

exports[`Storyshots Buttons|SubmitButton Default 1`] = `
<div
  className="sc-htoDjs bIDNS"
>
  <button
    className="button is-primary"
    onClick={[Function]}
    type="submit"
  >
     
    Submit
  </button>
</div>
`;

exports[`Storyshots DateFromNow Default 1`] = `
<div>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2009-06-30 18:30:00"
    >
      over 10 years ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-06-30 18:30:00"
    >
      3 months ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-10-12 13:56:40"
    >
      less than a minute ago
    </time>
  </p>
  <p>
    <time
      className="sc-bdVaJa dkavpQ"
      title="2019-10-11 13:56:40"
    >
      1 day ago
    </time>
  </p>
</div>
`;

exports[`Storyshots Loading Default 1`] = `
<div>
  <div
    className="sc-bwzfXH fuRxdH is-flex"
  >
    <img
      alt="loading.alt"
      className="sc-htpNat bhQHKl"
      src="/images/loading.svg"
    />
    <p
      className="has-text-centered"
    />
  </div>
</div>
`;

exports[`Storyshots Logo Default 1`] = `
<div
  className="sc-bxivhb gXEZub"
>
  <img
    alt="logo.alt"
    src="/images/logo.png"
  />
</div>
`;
